# pxdocs-cli

./: .gitignore  Cargo.toml  README.md  install.sh  package.json
src/: cli.js  config.js  docs.js  git.js  main.rs  remote.js
