[package]
name = "pxdocs-cli"
version = "0.1.3"
edition = "2024"
license = "UNLICENSED"
description = "CLI for discovering PX docs decisions and guides"

[[bin]]
name = "pxdocs"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
